# DescriptorReasoning_ACCV_2024

./: .gitignore  README.md  example.py  hunconf.py  pyproject.toml  run.sh
reasoning/: train_multigpu_reasoning.py  utils.py
reasoning/eval/: pose_eval.py  scannet1500.py  table.py
reasoning/features/: aliked.py  desc_reasoning.py  dinov2.py  superpoint.py
reasoning/matchers/: nearest_neighbor.py
reasoning/modules/: utils.py  visualization.py
reasoning/scripts/: export_alike.py  export_aliked.py  export_dedode.py  export_delf.py  export_dino.py  export_disk.py  export_relf.py  export_superpoint.py  export_xfeat.py
reasoning/scripts/scannet/: 02_extract_scannet.py  03_calculate_scannet_covisibility.py  04_build_h5.py
